--- a/src/static/feed/add_subscription.html
+++ b/src/static/feed/add_subscription.html
@@ -17,16 +17,16 @@
 	<div class="modal-body">
 		<form class="form-horizontal">
 			<div class="control-group">
-				<label class="control-label" for="add_subscription_url">Url</label>
+				<label class="control-label" for="add_subscription_url_input">Url</label>
 				<div class="controls">
-					<input type="text" id="add_subscription_url" placeholder="URL" class="input-block-level" />
+					<input type="text" id="add_subscription_url_input" placeholder="URL" class="input-block-level" />
 				</div>
 			</div>
 		</form>
 	</div>
 	<div class="modal-footer">
 		<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-		<button class="btn btn-primary">Subscribe</button>
+		<button id="add_subscription_submit_btn" class="btn btn-primary">Subscribe</button>
 	</div>
 </div>
 
