"add subscription" wait #26

--- a/src/static/feed/add_subscription.html
+++ b/src/static/feed/add_subscription.html
@@ -25,8 +25,11 @@
 		</form>
 	</div>
 	<div class="modal-footer">
-		<button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+		<button id="add_subscription_close_btn" class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
 		<button id="add_subscription_submit_btn" class="btn btn-primary">Subscribe</button>
+		<div id="add_subscription_progress" class="progress progress-striped active">
+			<div id="add_subscription_progress_bar" class="bar"></div>
+		</div>
 	</div>
 </div>
 
