fix unsubscribe feature better class name for template stuff

--- a/src/static/feed/subscription.html
+++ b/src/static/feed/subscription.html
@@ -5,7 +5,7 @@
 <head><title></title></head>
 
 <body>
-<div id="subscription_import" class="module">
+<div id="subscription_import">
 
 <div id="subscription_rm_modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="subscription_rm_modal_label" aria-hidden="true">
 	<div class="modal-header">
@@ -25,7 +25,7 @@
 </div>
 
 <table>
-	<thead id="subscription_header_template" class="import_target">
+	<thead id="subscription_header_template" class="template">
 		<tr>
 			<td class="subscription_item_brief_title" colspan="2">
 				<a href="#" class="link"><h1><span class="title_text"></span></h1></a>
@@ -38,7 +38,7 @@
 			</td>
 		</tr>
 	</thead>
-	<tbody id="subscription_item_brief_template" class="subscription_item subscription_item_brief">
+	<tbody id="subscription_item_brief_template" class="template subscription_item subscription_item_brief">
 		<tr>
 			<td class="click_open_detail">
 				<i class="link_icon icon-chevron-right"></i>
@@ -54,7 +54,7 @@
 			</td>
 		</tr>
 	</tbody>
-	<tbody id="subscription_item_detail_template" class="subscription_item subscription_item_detail">
+	<tbody id="subscription_item_detail_template" class="template subscription_item subscription_item_detail">
 		<tr>
 			<td class="click_close_detail">
 				<i class="link_icon icon-chevron-down"></i>
