--- a/src/static/feed/subscription.html
+++ b/src/static/feed/subscription.html
@@ -59,8 +59,8 @@
 			<td class="click_close_detail">
 				<i class="link_icon icon-chevron-down"></i>
 			</td>
-			<td class="subscription_item_title">
-				<a href="#" class="link"><h4><span class="title_text"></span></h4></a>
+			<td class="subscription_item_title click_close_detail">
+				<h4><a href="#" class="link stop_propagation"><span class="title_text"></span></a></h4>
 			</td>
 			<td class="subscription_item_published click_close_detail">
 				<span class="published_text"></span>
