star feature in html #33

--- a/src/static/feed/subscription.html
+++ b/src/static/feed/subscription.html
@@ -30,9 +30,11 @@
 			<td class="subscription_item_brief_title" colspan="2">
 				<a href="#" class="link"><h1><span class="title_text"></span></h1></a>
 			</td>
-			<td class="subscription_last_poll">
+			<td class="subscription_last_poll nowrap no_padding_right">
+				<i class="link_icon icon-refresh"></i>
 				<span class="last_poll_text"></span>
 			</td>
+			<td></td>
 			<td>
 				<a href="#" class="link"><i class="link_icon icon-play"></i></a>
 			</td>
@@ -43,13 +45,16 @@
 			<td class="click_open_detail">
 				<i class="link_icon icon-chevron-right"></i>
 			</td>
-			<td class="click_open_detail subscription_item_title">
+			<td class="click_open_detail subscription_item_title no_padding_right">
 				<span class="title_text"></span>
 			</td>
-			<td class="click_open_detail subscription_item_published">
+			<td class="click_open_detail subscription_item_published nowrap no_padding_right">
 				<span class="published_text"></span>
 			</td>
-			<td>
+			<td class="no_padding_right">
+				<i class="link_icon subscription_star icon-star-empty"></i>
+			</td>
+			<td class="no_padding_right">
 				<a href="#" class="link"><i class="link_icon icon-play"></i></a>
 			</td>
 		</tr>
@@ -59,22 +64,25 @@
 			<td class="click_close_detail">
 				<i class="link_icon icon-chevron-down"></i>
 			</td>
-			<td class="subscription_item_title click_close_detail">
+			<td class="subscription_item_title click_close_detail no_padding_right">
 				<h4><a href="#" class="link stop_propagation"><span class="title_text"></span></a></h4>
 			</td>
-			<td class="subscription_item_published click_close_detail">
+			<td class="subscription_item_published click_close_detail nowrap no_padding_right">
 				<span class="published_text"></span>
 			</td>
-			<td>
+			<td class="no_padding_right">
+				<i class="link_icon subscription_star icon-star-empty"></i>
+			</td>
+			<td class="no_padding_right">
 				<a href="#" class="link"><i class="link_icon icon-play"></i></a>
 			</td>
 		</tr>
 		<tr class="tr_cont">
-			<td class="content" colspan="4">
+			<td class="content" colspan="5">
 			</td>
 		</tr>
 		<tr class="tr_cont">
-			<td class="footer" colspan="4">
+			<td class="footer" colspan="5">
 				<img class="subscription_share_btn share_facebook" src="/static/feed/img/share/facebook-16.png" />
 				<img class="subscription_share_btn share_twitter"  src="/static/feed/img/share/twitter-16.png" />
 				<img class="subscription_share_btn share_gplus"    src="/static/feed/img/share/gplus-16.png" />
