--- a/src/static/users/ui.html
+++ b/src/static/users/ui.html
@@ -35,6 +35,9 @@
 							</div>
 						</div>
 					</div>
+					<div id="users_auth_login_progress" class="progress progress-striped active">
+						<div id="users_auth_login_progress_bar" class="bar"></div>
+					</div>
 				</div>
 				<div class="tab-pane" id="users_auth_reg">
 					<div class="form-horizontal">
