web user reg #71

--- a/src/static/users/ui.html
+++ b/src/static/users/ui.html
@@ -65,6 +65,9 @@
 							</div>
 						</div>
 					</div>
+					<div id="users_auth_reg_progress" class="progress progress-striped active">
+						<div id="users_auth_reg_progress_bar" class="bar"></div>
+					</div>
 				</div>
 			</div>
 		</div>
