--- a/src/static/users/ui.html
+++ b/src/static/users/ui.html
@@ -17,19 +17,19 @@
 			<div class="control-group">
 				<label class="control-label" for="users_auth_chpwd_old_password_input">Old password</label>
 				<div class="controls">
-					<input type="text" id="users_auth_chpwd_old_password_input" placeholder="old password" />
+					<input type="password" id="users_auth_chpwd_old_password_input" placeholder="old password" />
 				</div>
 			</div>
 			<div class="control-group">
 				<label class="control-label" for="users_auth_chpwd_password0_input">New password</label>
 				<div class="controls">
-					<input type="text" id="users_auth_chpwd_password0_input" placeholder="new password" />
+					<input type="password" id="users_auth_chpwd_password0_input" placeholder="new password" />
 				</div>
 			</div>
 			<div class="control-group">
 				<label class="control-label" for="users_auth_chpwd_password1_input">Repeat new password</label>
 				<div class="controls">
-					<input type="text" id="users_auth_chpwd_password1_input" placeholder="repeat new password" />
+					<input type="password" id="users_auth_chpwd_password1_input" placeholder="repeat new password" />
 				</div>
 			</div>
 		</form>
