--- a/src/static/auth/ui.html
+++ b/src/static/auth/ui.html
@@ -96,6 +96,17 @@
 							</div>
 						</div>
 						<div class="control-group">
+							<label class="control-label" for="auth_reg_disclaimer0">免責</label>
+							<div class="controls">
+								<label class="checkbox"><input type="checkbox" id="auth_reg_disclaimer0" /> 我明白系統正處於初期測試階段。</label>
+								<label class="checkbox"><input type="checkbox" id="auth_reg_disclaimer1" /> 我明白服務不隱定，隨時故障。</label>
+								<label class="checkbox"><input type="checkbox" id="auth_reg_disclaimer2" /> 我明白資料可能會永久丟失。</label>
+								<label class="checkbox"><input type="checkbox" id="auth_reg_disclaimer3" /> 我明白私隱可能會外洩。</label>
+								<label class="checkbox"><input type="checkbox" id="auth_reg_disclaimer4" /> 我明白自己是白老鼠。</label>
+								<label class="checkbox"><input type="checkbox" id="auth_reg_disclaimer5" /> 我明白服務提供者不會為我的損失，負上任何責任。</label>
+							</div>
+						</div>
+						<div class="control-group">
 							<div class="controls">
 								<button class="btn btn-primary" id="auth_reg_btn">Register</button>
 							</div>
