big path change

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -4,13 +4,13 @@
 
 <head>
     <title>MomohaFeed</title>
-    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.css" />
-    <link rel="stylesheet" href="/static/feed/common.css" />
-    <link rel="stylesheet" href="/static/feed/root_layout.css" />
-    <link rel="stylesheet" href="/static/feed/subscription.css" />
-    <link rel="stylesheet" href="/static/feed/add_subscription.css" />
-    <link rel="stylesheet" href="/static/feed/share.css" />
-    <script data-main="main.js" src="/static/requirejs/require.js"></script>
+    <link rel="stylesheet" href="inc/bootstrap/css/bootstrap.css" />
+    <link rel="stylesheet" href="inc/feed/common.css" />
+    <link rel="stylesheet" href="inc/feed/root_layout.css" />
+    <link rel="stylesheet" href="inc/feed/subscription.css" />
+    <link rel="stylesheet" href="inc/feed/add_subscription.css" />
+    <link rel="stylesheet" href="inc/feed/share.css" />
+    <script data-main="main.js" src="inc/requirejs/require.js"></script>
 </head>
 
 <body>
