--- a/src/static/inc/feed/subscription.html
+++ b/src/static/inc/feed/subscription.html
@@ -24,6 +24,30 @@
 	</div>
 </div>
 
+<div id="subscription_rename_modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="subscription_rename_modal_label" aria-hidden="true">
+	<div class="modal-header">
+		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+		<h3 id="subscription_rename_modal_label">Rename</h3>
+	</div>
+	<div class="modal-body">
+		<form class="form-horizontal">
+			<div class="control-group">
+				<label class="control-label" for="subscription_rename_name_input">Rename</label>
+				<div class="controls">
+					<input type="text" id="subscription_rename_name_input" placeholder="" class="input-block-level" />
+				</div>
+			</div>
+		</form>
+	</div>
+	<div class="modal-footer">
+		<button id="subscription_rename_modal_close_btn" class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
+		<button id="subscription_rename_modal_submit_btn" class="btn btn-primary">Rename</button>
+		<div id="subscription_rename_modal_progress" class="progress progress-striped active">
+			<div id="subscription_rename_modal_progress_bar" class="bar"></div>
+		</div>
+	</div>
+</div>
+
 <table>
 	<thead id="subscription_header_template" class="template">
 		<tr>
