--- a/src/static/index.html
+++ b/src/static/index.html
@@ -58,6 +58,7 @@
 						<i class="icon-cog"></i> <span class="caret"></span>
 					</a>
 					<ul class="dropdown-menu">
+						<li><a href="#subscription_rename_modal" id="subscription_show_rename_modal_btn" data-toggle="modal"><i class="icon-pencil"></i> Rename</a></li>
 						<li><a href="#subscription_rm_modal" id="subscription_show_rm_modal_btn" data-toggle="modal"><i class="icon-trash"></i> Unsubscribe</a></li>
 					</ul>
 				</div>
