--- a/src/static/index.html
+++ b/src/static/index.html
@@ -28,7 +28,19 @@
 <div id="list_subscription_area" class="listarea">
 	<div id="list_subscription_menu">
 		<div class="menu_padding">
-			<a id="show_add_subscription_modal_btn" href="#add_subscription_modal" role="button" class="btn" data-toggle="modal"><i class="icon-plus"></i> Add</a>
+			<div id="list_subscription_menu_toolbar" class="btn-toolbar">
+				<div class="btn-group">
+					<button id="show_add_subscription_modal_btn" href="#add_subscription_modal" role="button" class="btn" data-toggle="modal"><i class="icon-plus"></i> Add</button>
+				</div>
+				<div class="btn-group pull-right">
+					<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+						<i class="icon-cog"></i> <span class="caret"></span>
+					</a>
+					<ul class="dropdown-menu">
+						<li><a href="#subscription_addtag_modal" id="subscription_show_addtag_modal_btn" data-toggle="modal"><i class="icon-tag"></i> Create Tag</a></li>
+					</ul>
+				</div>
+			</div>
 		</div>
 	</div>
 	<div id="list_subscription_main">
@@ -58,6 +70,7 @@
 						<i class="icon-cog"></i> <span class="caret"></span>
 					</a>
 					<ul class="dropdown-menu">
+						<li><a href="#subscription_tag_modal" id="subscription_show_tag_modal_btn" data-toggle="modal"><i class="icon-tag"></i> Tag</a></li>
 						<li><a href="#subscription_rename_modal" id="subscription_show_rename_modal_btn" data-toggle="modal"><i class="icon-pencil"></i> Rename</a></li>
 						<li><a href="#subscription_rm_modal" id="subscription_show_rm_modal_btn" data-toggle="modal"><i class="icon-trash"></i> Unsubscribe</a></li>
 					</ul>
