--- a/src/static/index.html
+++ b/src/static/index.html
@@ -70,9 +70,11 @@
 						<i class="icon-cog"></i> <span class="caret"></span>
 					</a>
 					<ul class="dropdown-menu">
-						<li><a href="#subscription_tag_modal" id="subscription_show_tag_modal_btn" data-toggle="modal"><i class="icon-tag"></i> Tag</a></li>
-						<li><a href="#subscription_rename_modal" id="subscription_show_rename_modal_btn" data-toggle="modal"><i class="icon-pencil"></i> Rename</a></li>
-						<li><a href="#subscription_rm_modal" id="subscription_show_rm_modal_btn" data-toggle="modal"><i class="icon-trash"></i> Unsubscribe</a></li>
+						<li id="subscription_show_tag_modal_li"><a href="#subscription_tag_modal" id="subscription_show_tag_modal_btn" data-toggle="modal"><i class="icon-tag"></i> Tag</a></li>
+						<li id="subscription_show_rename_modal_li"><a href="#subscription_rename_modal" id="subscription_show_rename_modal_btn" data-toggle="modal"><i class="icon-pencil"></i> Rename</a></li>
+						<li id="subscription_show_rm_modal_li"><a href="#subscription_rm_modal" id="subscription_show_rm_modal_btn" data-toggle="modal"><i class="icon-trash"></i> Unsubscribe</a></li>
+						<li id="subscription_show_tag_rename_modal_li"><a href="#subscription_tag_rename_modal" id="subscription_show_tag_rename_modal_btn" data-toggle="modal"><i class="icon-pencil"></i> Rename</a></li>
+						<li id="subscription_show_tag_rm_modal_li"><a href="#subscription_tag_rm_modal" id="subscription_show_tag_rm_modal_btn" data-toggle="modal"><i class="icon-trash"></i> Delete</a></li>
 					</ul>
 				</div>
 			</div>
