--- a/src/static/inc/feed/subscription.html
+++ b/src/static/inc/feed/subscription.html
@@ -175,14 +175,14 @@
 <div id="subscription_tag_rm_modal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="subscription_tag_rm_modal_label" aria-hidden="true">
 	<div class="modal-header">
 		<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-		<h3 id="subscription_tag_rm_modal_label">Unsubscribe</h3>
+		<h3 id="subscription_tag_rm_modal_label">Delete</h3>
 	</div>
 	<div class="modal-body">
 		Sure!?
 	</div>
 	<div class="modal-footer">
 		<button id="subscription_tag_rm_modal_close_btn" class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-		<button id="subscription_tag_rm_modal_submit_btn" class="btn btn-danger">Unsubscribe</button>
+		<button id="subscription_tag_rm_modal_submit_btn" class="btn btn-danger">Delete</button>
 		<div id="subscription_tag_rm_modal_progress" class="progress progress-striped active">
 			<div id="subscription_tag_rm_modal_progress_bar" class="bar"></div>
 		</div>
