mark time stamp

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -10,7 +10,14 @@
     <link rel="stylesheet" href="inc/feed/subscription.css" />
     <link rel="stylesheet" href="inc/feed/add_subscription.css" />
     <link rel="stylesheet" href="inc/feed/share.css" />
-    <script data-main="main.js" src="inc/requirejs/require.js"></script>
+    <script type="text/javascript">
+    	var LOAD_TIMESTAMP=(new Date()).getTime();
+    	var fileref=document.createElement('script');
+    	fileref.setAttribute('data-main','main.js?v='+LOAD_TIMESTAMP);
+    	fileref.setAttribute('src','inc/requirejs/require.js');
+    	document.getElementsByTagName("head")[0].appendChild(fileref);
+    </script>
+    <!-- <script data-main="main.js?v=20130502201450" src="inc/requirejs/require.js"></script> -->
 </head>
 
 <body>
