--- a/src/static/index.html
+++ b/src/static/index.html
@@ -13,7 +13,7 @@
     <script type="text/javascript">
     	var LOAD_TIMESTAMP=(new Date()).getTime();
     	var fileref=document.createElement('script');
-    	fileref.setAttribute('data-main','main.js?v='+LOAD_TIMESTAMP);
+    	fileref.setAttribute('data-main','main.js?_='+LOAD_TIMESTAMP);
     	fileref.setAttribute('src','inc/requirejs/require.js');
     	document.getElementsByTagName("head")[0].appendChild(fileref);
     </script>
