--- a/src/static/index.html
+++ b/src/static/index.html
@@ -45,6 +45,7 @@
 					</a>
 					<ul class="dropdown-menu">
 						<li><a href="#subscription_addtag_modal" id="subscription_show_addtag_modal_btn" data-toggle="modal"><i class="icon-tag"></i> Create Tag</a></li>
+						<li><a href="#subscription_importopml_modal" id="subscription_show_importopml_modal_btn" data-toggle="modal"><i class="icon-download-alt"></i> Import OPML</a></li>
 					</ul>
 				</div>
 			</div>
