simple working opml #106 add feed sample

--- a/src/static/inc/feed/subscription.html
+++ b/src/static/inc/feed/subscription.html
@@ -223,7 +223,7 @@
 			<div class="control-group">
 				<label class="control-label" for="subscription_importopml_file_input">File</label>
 				<div class="controls">
-					<input id="subscription_importopml_file_input" type="file" name="opmlFile" class="input">
+					<input id="subscription_importopml_file_input" type="file" name="file" class="input">
 					<!-- <input type="text" id="subscription_importopml_title_input" placeholder="tag name" class="input-block-level" /> -->
 				</div>
 			</div>
