improve opml import #106

--- a/src/static/inc/feed/subscription.html
+++ b/src/static/inc/feed/subscription.html
@@ -219,7 +219,7 @@
 		<h3 id="subscription_importopml_modal_label">Import OPML</h3>
 	</div>
 	<div class="modal-body">
-		<form class="form-horizontal">
+		<form class="form-horizontal" id="subscription_importopml_modal_form">
 			<div class="control-group">
 				<label class="control-label" for="subscription_importopml_file_input">File</label>
 				<div class="controls">
