#54, html show unread count

--- a/src/static/inc/feed/subscription.html
+++ b/src/static/inc/feed/subscription.html
@@ -167,7 +167,7 @@
 </div>
 
 <ul class="hide">
-	<li id="list_subscription_li_template"><a class="list_subscription_a" href="#"><span class="list_subscription_title"></span></a></li>
+	<li id="list_subscription_li_template"><a class="list_subscription_a" href="#"><span class="list_subscription_title"></span> (<span class="list_subscription_unreadcount"></span>)</a></li>
 	<li id="list_subscription_tag_li_template" class="nav-header"><a class="list_subscription_a" href="#"><i class="icon-tag"></i> <span class="list_subscription_title"></span></a></li>
 	<li id="list_subscription_divider_li_template" class="divider"></li>
 </ul>
